// Since: cosmos-sdk 0.43
syntax = "proto3";
package osmosis.launchpad.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/launchpad/types";
option (gogoproto.goproto_getters_all) = false;

message EventCreateSale {
  uint64 id = 1;
  string creator = 2;
  string token_in = 3;
  string token_out = 4;
}

message EventSubscribe {
  string sender = 1;
  uint64 sale_id = 2;
  string amount = 3;
}

message EventWithdraw {
  string sender = 1;
  uint64 sale_id = 2;
  // amount of staked tokens withdrawn by user.
  string amount = 3;
}

message EventExit {
  string sender = 1;
  uint64 sale_id = 2;
  // amount of purchased tokens
  string purchased = 3;
}

message EventFinalizeSale {
  uint64 sale_id = 1;
  // amount of earned tokens_in
  string income = 3;
}
