syntax = "proto3";
package osmosis.launchpad.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/launchpad/types";
option (gogoproto.goproto_getters_all) = false;

service Msg {
  // CreateSale creates new token sale. Anyone can create a new sale.
  // params.SaleBond OSMO will be charged as a bond (returned in FinalizeSale)
  // to avoid spams.
  // The sale follows the launchpad functionality explained in the
  // x/launchapd/spec
  rpc CreateSale(MsgCreateSale) returns (MsgCreateSaleResponse);

  // Subscribe to a token sale. Any use at any time before the sale end can join
  // the sale by sending `token_in` to the Sale through the Subscribe msg.
  // During the salem user `token_in` will be automatically charged every
  // epoch to purchase `token_out`.
  rpc Subscribe(MsgSubscribe) returns (google.protobuf.Empty);

  // Withdraw sends back `amount` of unspent tokens_in to the user.
  // If `amount` is empty, it will default to all unspent tokens.
  // User can do it any time unless his deposit is empty.
  rpc Withdraw(MsgWithdraw) returns (google.protobuf.Empty);

  // ExitSale withdraws (by a user who subscribed to the sale) purchased
  // tokens_out from the pool and remained tokens_in. Returns error if it's
  // called before the sale end.
  rpc ExitSale(MsgExitSale) returns (MsgExitSaleResponse);

  // FinalizeSale clean ups the sale and sends income (earned tokens_in) to the
  // Sale recipient. Returns error if called before the Sale end. Anyone can
  // call this method.
  rpc FinalizeSale(MsgFinalizeSale) returns (MsgFinalizeSaleResponse);
}

message MsgCreateSale {
  // Sale creator and the account which provides token (token_out) to the sale.
  // When processing this message, token_out
  string creator = 1;
  // token_in is a denom used to buy `token_out`. May be referred as a
  // "quote currency".
  string token_in = 2;
  // token_out a token denom to be bootstraped. May be referred as "base
  // currency".
  string token_out = 3;

  // start time when the token sale starts.
  google.protobuf.Timestamp start_time = 4
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  // duration time that the sale takes place over
  google.protobuf.Duration duration = 5
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];

  // total number of `tokens_out` to be sold during the continous sale.
  // tokens are deposited from the creator account.
  string initial_deposit = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  // Recipient is the account which receives earned `token_in` from when the
  // sale is finalized. If not defined (empty) the creator
  // account will be used.
  string recipient = 7;
}

message MsgCreateSaleResponse {
  uint64 sale_id = 1 [ (gogoproto.moretags) = "yaml:\"sale_id\"" ];
}

message MsgSubscribe {
  // sender is an account address adding a deposit
  string sender = 1;
  // sale_id is a valid ID of this module Sale
  uint64 sale_id = 2 [ (gogoproto.moretags) = "yaml:\"sale_id\"" ];
  // number of sale.token_in staked by a user.
  string amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgWithdraw {
  // sender is an account address subscribed to the sale_id
  string sender = 1;
  uint64 sale_id = 2 [ (gogoproto.moretags) = "yaml:\"sale_id\"" ];
  // amount of in_tokens to withdraw, must be at most the amount of not spent
  // tokens, unless set to null - then all remaining balance will be withdrawn
  string amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
}

message MsgExitSale {
  // sender is an account address exiting a sale
  string sender = 1;
  uint64 sale_id = 2 [ (gogoproto.moretags) = "yaml:\"sale_id\"" ];
}

message MsgExitSaleResponse {
  // Purchased amount of "out" tokens withdrawn to the user.
  string purchased = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgFinalizeSale {
  // sender is an account signing the message and triggering the finalization.
  string sender = 1;
  uint64 sale_id = 2 [ (gogoproto.moretags) = "yaml:\"sale_id\"" ];
}

message MsgFinalizeSaleResponse {
  // Income amount of token_in sent to the sale recipient.
  string income = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
